@@ -1,0 +1,4 @@
+import * as middleware from './Organisations.middleware'
+import reducer, * as actions from './Organisations.reducer'
+
+export { actions, middleware, reducer }
