@@ -1,0 +1,1 @@
+export type Normalise<Data, NormalisedData> = (data: Data[], identifier?: string) => NormalisedData
